@@ -260,6 +260,7 @@
 
 
 
+
                           In Popup" selected will show in the popup menu
                           regardless of w<font size="-1">hether any text
                             is or is not selected.<br>
@@ -276,6 +277,7 @@
                                   size="-1"><font size="-1"><font
                                       size="-1"><font size="-1"><font
                                           size="-1">/tmp/textfile</font></font></font></font></font></font></font></font></font>"|tail
+
 
 
 
@@ -367,10 +369,12 @@
 
 
 
+
                               of xterm and beyond</font></font> my
                           control :(<br>
                           <br>
                         </font>For very </font></font></font></font></font></font></font></font>complex
+
 
 
 
@@ -465,6 +469,7 @@
 
 
 
+
         one in /usr/share/KKEdit/tools ) you must have root privileges.<br>
         <br>
         You can also display a progress bar from your tool by selecting
@@ -506,6 +511,7 @@
           The 'Run as Root Command' allows you to set your favorite
           graphical root privileges program, if this is blank a terminal
           will be used to ask for admin passwords ( <a href="#gtksui">See
+
 
 
 
@@ -614,6 +620,7 @@
           <img alt="popup" src="popup.png" width="606" height="640"><br>
           <br>
         </font></font><font size="-1"><a name="spellchk"></a></font><b>Spell
+
 
 
 
@@ -791,6 +798,7 @@
 
 
 
+
                         here</a><font size="-1"> )<font size="-1">, use
                           'gtksu --', ubuntu users may have to use
                           'gtksu -- sudo' to stop gtk3 complaining,
@@ -827,6 +835,7 @@
                                               uses regex expressions<font
                                                 size="-1">, the quick
                                                 search <font size="-1">on
+
 
 
 
@@ -909,10 +918,12 @@
 
 
 
+
                                                     does not,<font
                                                       size="-1">
                                                       searching
                                                       backwards </font>can
+
 
 
 
@@ -1009,7 +1020,9 @@
 
 
 
+
                                                         <font size="-1">A</font>ll'
+
 
 
 
@@ -1096,6 +1109,7 @@
 
 
 
+
                                                           'Wrap<font
                                                           size="-1">'
                                                           option to
@@ -1107,6 +1121,7 @@
                                                     </font><br>
                                                   </font></font></font></font></font></font></font></font></font></font></font></font></font><br>
                         </font></font></font></font></font></font></font></font></font>You
+
 
 
 
@@ -1304,7 +1319,6 @@ href="https://sites.google.com/site/kkeditlinuxtexteditor/kkedit-plugins"
         gtk-2.24.13.<br>
         gtksourceview-2.11.1.<br>
         ctags.<br>
-        xdg-utils-1.1.0.<br>
         Autotools.<br>
         libunique-1.1.6<br>
         <br>
@@ -1324,6 +1338,7 @@ href="https://sites.google.com/site/kkeditlinuxtexteditor/kkedit-plugins"
                             size="-1"><font size="-1">(</font></font></font></font></font><font
                       size="-1"><font size="-1"><font size="-1"><font
                             size="-1"><font size="-1"><font size="-1">optional
+
 
 
 
@@ -1428,10 +1443,12 @@ href="https://sites.google.com/site/kkeditlinuxtexteditor/kkedit-plugins"
 
 
 
+
                                                           but
                                                           recommended)<br>
                                                           <br>
                                                         </font></font></font></font></font></font></font></font></font></font></font></font></font>&nbsp;</font></font></font></font></font></font></font></font></font></font></font></font>webkit
+
 
 
 
